RESOLVED FIXED 258486
WebPage_LoadRequest IPC fails decoding in PingDuoDuo app
https://bugs.webkit.org/show_bug.cgi?id=258486
Summary WebPage_LoadRequest IPC fails decoding in PingDuoDuo app
Chris Dumez
Reported 2023-06-23 17:00:01 PDT
WebPage_LoadRequest IPC fails decoding in PingDuoDuo app, which causes a WebContent crash.
Attachments
Chris Dumez
Comment 1 2023-06-23 17:00:09 PDT
Chris Dumez
Comment 2 2023-06-23 17:05:54 PDT
EWS
Comment 3 2023-06-26 15:33:25 PDT
Committed 265529@main (0ba9e6c4473f): <https://commits.webkit.org/265529@main> Reviewed commits have been landed. Closing PR #15268 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.